# keyboardmouse

./: .gitignore  LICENSE  README.md  build2freeze-mc-mouse.sh  build2freeze-mouse.sh  example1.py  hotkey-exper.py  input-exper.py  libhotkey.py  libhotkye.py  libkbm.py  list-inputs.py  logs.py  mediakey.py  mouse.py  mouse2.py  pyproject.toml  requireuments.txt  setup.py  setup.py-Deprecated
keyboardmouse/: libhotkey.py  libkbm.py  logs.py  mouse.py
